<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/connectButton"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rgbButton"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/RGB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pinkButton"
        android:layout_width="235dp"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/pink"
        android:text="@string/pink"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/purpleButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/purpleButton"
        android:layout_width="235dp"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/purple"
        android:text="@string/purple"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/greenButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bluButton"
        android:layout_width="235dp"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/material_blu"
        android:text="@string/blu"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/redButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/redButton"
        android:layout_width="235dp"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/material_red"
        android:text="@string/red"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/pinkButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/whiteButton"
        android:layout_width="235dp"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bluButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/greenButton"
        android:layout_width="235dp"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/material_green"
        android:text="@string/green"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/number_picker_lux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        app:np_dividerColor="@color/colorPrimaryDark"
        app:np_fadingEdgeEnabled="true"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="430dp"
        app:np_max="10"
        app:np_min="0"
        app:np_orientation="vertical"
        app:np_scrollerEnabled="true"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_selectedTextSize="@dimen/small_text_size"
        app:np_textColor="@color/dark_grey"
        app:np_textSize="@dimen/small_text_size"
        app:np_typeface="@string/roboto_light"
        app:np_value="00"
        app:np_width="165dp"
        app:np_wrapSelectorWheel="true" />

    <Switch
        android:id="@+id/elwireSwitch"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:checked="false"
        android:text="@string/elwire"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textOff="EL WIRE OFF"
        android:textOn="EL WIRE ON"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectButton"
        tools:checked="false" />

</android.support.constraint.ConstraintLayout>