<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonPickerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonsActivity">

    <Button
        android:id="@+id/orangeButton"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/orange"
        android:text="@string/orange"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pinkButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pinkButton"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/pink"
        android:text="@string/pink"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/orangeButton"
        app:layout_constraintStart_toEndOf="@+id/purpleButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/purpleButton"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/purple"
        android:text="@string/purple"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/pinkButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/np_lux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/offColorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:np_dividerColor="@color/colorPrimaryDark"
        app:np_fadingEdgeEnabled="true"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="@dimen/orizzontal_picker_height"
        app:np_max="10"
        app:np_min="1"
        app:np_orientation="horizontal"
        app:np_scrollerEnabled="true"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_selectedTextSize="@dimen/small_text_size"
        app:np_textColor="@color/dark_grey"
        app:np_textSize="@dimen/small_text_size"
        app:np_typeface="@string/roboto_light"
        app:np_value="10"
        app:np_width="@dimen/orizzontal_picker_width"
        app:np_wrapSelectorWheel="true" />

    <Button
        android:id="@+id/offColorButton"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>