<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/numbPickerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RgbActivity">

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/number_picker_blu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_picker_green"
        app:layout_constraintTop_toTopOf="parent"
        app:np_dividerColor="@color/material_blu"
        app:np_fadingEdgeEnabled="true"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="@dimen/vertical_picker_height"
        app:np_max="@integer/max_value"
        app:np_min="@integer/min_value"
        app:np_scrollerEnabled="true"
        app:np_selectedTextColor="@color/material_blu"
        app:np_selectedTextSize="@dimen/selected_text_size"
        app:np_textColor="@color/material_blu"
        app:np_textSize="@dimen/text_size"
        app:np_typeface="@string/roboto_light"
        app:np_value="0"
        app:np_width="@dimen/vertical_picker_width"
        app:np_wrapSelectorWheel="true" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/number_picker_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number_picker_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:np_dividerColor="@color/material_red"
        app:np_fadingEdgeEnabled="true"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="@dimen/vertical_picker_height"
        app:np_max="@integer/max_value"
        app:np_min="@integer/min_value"
        app:np_scrollerEnabled="true"
        app:np_selectedTextColor="@color/material_red"
        app:np_selectedTextSize="@dimen/selected_text_size"
        app:np_textColor="@color/material_red"
        app:np_textSize="@dimen/text_size"
        app:np_typeface="@string/roboto_light"
        app:np_value="0"
        app:np_width="@dimen/vertical_picker_width"
        app:np_wrapSelectorWheel="true" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/number_picker_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number_picker_blu"
        app:layout_constraintStart_toEndOf="@+id/number_picker_red"
        app:layout_constraintTop_toTopOf="parent"
        app:np_dividerColor="@color/material_green"
        app:np_fadingEdgeEnabled="true"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="@dimen/vertical_picker_height"
        app:np_max="@integer/max_value"
        app:np_min="@integer/min_value"
        app:np_scrollerEnabled="true"
        app:np_selectedTextColor="@color/material_green"
        app:np_selectedTextSize="@dimen/selected_text_size"
        app:np_textColor="@color/material_green"
        app:np_textSize="@dimen/text_size"
        app:np_typeface="@string/roboto_light"
        app:np_value="0"
        app:np_width="@dimen/vertical_picker_width"
        app:np_wrapSelectorWheel="true" />

    <Button
        android:id="@+id/fadeButton"
        android:layout_width="320dp"
        android:layout_height="@dimen/vertical_picker_width"
        android:text="@string/fade_on"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_picker_blu" />

    <TextView
        android:id="@+id/redView"
        android:layout_width="@dimen/vertical_picker_width"
        android:layout_height="wrap_content"
        android:text="RED"
        android:textAlignment="center"
        android:textColor="@color/material_red"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/number_picker_red"
        app:layout_constraintEnd_toStartOf="@+id/greenView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/greenView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GREEN"
        android:textAlignment="center"
        android:textColor="@color/material_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/number_picker_green"
        app:layout_constraintEnd_toStartOf="@+id/bluView"
        app:layout_constraintStart_toEndOf="@+id/redView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/bluView"
        android:layout_width="@dimen/vertical_picker_width"
        android:layout_height="wrap_content"
        android:text="BLU"
        android:textAlignment="center"
        android:textColor="@color/material_blu"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/number_picker_blu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/greenView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/showColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/greenView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>